overlays/prod/mongo-url-per-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-service
spec:
  template:
    spec:
      containers:
        - name: users-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tours-service
spec:
  template:
    spec:
      containers:
        - name: tours-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookings-service
spec:
  template:
    spec:
      containers:
        - name: bookings-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reviews-service
spec:
  template:
    spec:
      containers:
        - name: reviews-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-service
spec:
  template:
    spec:
      containers:
        - name: blog-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-service
spec:
  template:
    spec:
      containers:
        - name: chat-service
